--- a/style.css
+++ b/style.css
@@ -7,39 +7,70 @@
     --darkGrayishBlue: hsl(217, 19%, 24%);
     --darkBlue: hsl(218, 23%, 16%);
     --fontPrimary: 'Manrope', sans-serif;
+    --mobile: 642px;
 }
 
 html {
   font-size: 16px;
 }
 
-body { 
+body {
+  margin: 0;
+  padding:0;
+}
+
+main { 
+  padding:0;
+  margin:0;
     background-color: var(--darkBlue);
     font-size: 1.75rem;
     font-family: var(--fontPrimary);
-    min-height: 95vh;
+    height: 100vh;
+    width: 100vw;
+    max-width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    overflow: hidden;
 }
 
 .advice-container {
   background-color: var(--darkGrayishBlue);
-  max-width: 34rem;
   border-radius: 45px;
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
   color:var(--lightCyan);
-  padding-bottom: 50px;
+  margin: 50px;
+  min-height:60vh;
+}
+
+.transition {
+  transition: all 1.5s ease-in-out;
+}
+
+@keyframes move {
+  50% {
+      transform: scale(2)
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@media screen and (min-width: 692px) {
+  .advice-container {
+    min-height:400px;
+    width: 450px;
+  }
 }
 
 .advice-id {
   color: var(--neonGreen);
   font-size:1rem;
-  padding: 40px 0;
+  padding-top:40px;
   text-transform: uppercase;
   letter-spacing: 6px;
 }
@@ -72,9 +103,6 @@ picture {
   transition: all .25s ease-in-out;
 }
 
-#dice:hover > img {
-  animation: jumping 0.45s infinite alternate;
-}
 
 #dice img {
   color:hsl(150, 100%, 66%);
@@ -104,6 +132,3 @@ picture {
   margin-top: 25px;
   position: absolute;
 }
-
-.attribution { font-size: 11px; text-align: center; position: absolute; bottom:0;color:#fff}
-.attribution a { color: hsl(228, 45%, 44%); }
